<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Titel der App -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_title"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <!-- Beschreibung der App -->
    <TextView
        android:id="@+id/tag_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_tag_line"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <!-- Elemente für die Dateneingabe in einem separaten Layout -->
    <!-- Die Größe der Kindelemente wird durch deren relative Ausnutzung des verfügbaren Platzes (weightSum) definiert -->
    <LinearLayout
        android:id="@+id/input_elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintTop_toBottomOf="@id/tag_line"
        tools:layout_editor_absoluteX="10dp">

        <!-- Eingabe der Mengenangabe für den neuen Eintrag -->
        <!-- Durch das Setzen des Input-Types können hier nur Zahlen eingegeben werden -->
        <!-- Über einen Platzhalterwert (hint) wird bei leerem Eingabefeld ein Hinweis angezigt, welche Art von Eingaben hier erfolgen sollen -->
        <EditText
            android:id="@+id/input_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/input_quantity_default"
            android:hint="@string/input_quantity_hint"
            android:importantForAutofill="no"
            android:inputType="number" />

        <!-- Eingabe der Bezeichnung für den neuen Eintrag -->
        <!-- Über einen Platzhalterwert (hint) wird bei leerem Eingabefeld ein Hinweis angezigt, welche Art von Eingaben hier erfolgen sollen -->
        <EditText
            android:id="@+id/input_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/input_item_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <!-- Button zum Hinzufügen eines neuen Eintrags auf Basis der Inhalte der beiden Eingabefelder -->
        <Button
            android:id="@+id/input_add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/input_button_label" />
    </LinearLayout>

    <!-- View zur Darstellung der aktuellen Inhalte der Einkaufsliste -->
    <ListView
        android:id="@+id/list_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/input_elements"/>

</androidx.constraintlayout.widget.ConstraintLayout>